.k8s/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "cmsnesia-ingress"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Host, X-Request-ID, X-Read-IP, X-Forwarded-For, X-Forwarded-Host, X-Forwarded-Port, X-Forwarded-Proto, X-Scheme, X-Original-Forwarded-For, Accept-Encoding, CF-IPCountry, CF-RAY, CF-Visitor, user-agent, accept, accept-language, access-control-request-method, access-control-request-headers, referer, origin, CF-Connecting-IP, CDN-Loop, TE, Authorization, Content-Type"
spec:
  tls:
    - hosts:
        - "api.cmsnesia.com"
        - "admin.cmsnesia.com"
      secretName: cmsnesia-tls
  rules:
    - host: "api.cmsnesia.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: "cmsnesia-service"
              servicePort: 8080
    - host: "admin.cmsnesia.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: "cmsnesia-admin-service"
              servicePort: 80
